--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Twenty by HTML5 UP</title>
+		<title>Danny Yan - Web Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -17,7 +17,7 @@
 
 			<!-- Header -->
 				<header id="header" class="alt">
-					<h1 id="logo"><a href="index.html">Twenty <span>by HTML5 UP</span></a></h1>
+					<h1 id="logo"><a href="index.html">HOME <span></span></a></h1>
 					<nav id="nav">
 						<ul>
 							<li class="current"><a href="index.html">Welcome</a></li>
@@ -64,7 +64,7 @@
 						</header>
 						<p>Full Stack
 						<br />
-						Web Developer
+						<strong>Web Developer</strong>
 						<br />
 						from the Bay Area</p>
 						<footer>
@@ -82,15 +82,14 @@
 
 					<header class="special container">
 						<span class="icon fas fa-laptop"></span>
-						<h2>As this is my <strong>twentieth</strong> freebie for HTML5 UP
+						<h2> Programmer. 
 						<br />
-						I decided to give it a really creative name.</h2>
-						<p>Turns out <strong>Twenty</strong> was the best I could come up with. Anyway, lame name aside,
+						Super Cool Intro Here</h2>
+						<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem.
 						<br />
-						it's minimally designed, fully responsive, built on HTML5/CSS3,
-						and, like all my stuff,
+						Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo.
 						<br />
-						released for free under the <a href="http://html5up.net/license">Creative Commons Attribution 3.0</a> license. Have fun!</p>
+						Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
 					</header>
 
 					<!-- One -->
@@ -132,33 +131,39 @@
 								<div class="col-4 col-12-narrower">
 
 									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>This is Something</h3>
+										<div class="image-cont">
+											<a href="#" class="image featured" target="_blank"><img src="./images/tetris2.png" alt="" /></a>										<header>
+										</div>
+											<h3>Tetris (IN PROGRESS)</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>A 1980s tile-matching puzzle game using Vanilla JavaScript and HTML5 Canvas</p>
 									</section>
 
 								</div>
 								<div class="col-4 col-12-narrower">
 
-									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>Also Something</h3>
-										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
-									</section>
-
-								</div>
+										<section>
+											<div class="image-cont">
+												<a href="https://chillify.herokuapp.com/" target="_blank" class="image featured"><img src="images/chillify.png"  alt="" /></a>
+											</div>
+												<header>
+												<h3>Chillify</h3>
+											</header>
+											<p>A clone of the audio streaming platform “Spotify” using Ruby on Rails, React/Redux, Javascript</p>
+										</section>
+	
+									</div>
+	
 								<div class="col-4 col-12-narrower">
 
 									<section>
-										<span class="icon featured fa-check"></span>
-										<header>
-											<h3>Probably Something</h3>
+										<div class="image-cont">
+											<a href="#" class="image featured" target="_blank"><img src="images/sweet.png" alt="" /></a>										<header>
+										</div>
+											<h3>Sweet Hashtag Analyzer</h3>
 										</header>
-										<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo suscipit dolor nec nibh. Proin a ullamcorper elit, et sagittis turpis. Integer ut fermentum.</p>
+										<p>A tool that visualizes sentiment-analysis data about a Twitter Hashtag using React/Redux, Chart.JS, MongoDB, Express, Node.JS
+											</p>
 									</section>
 
 								</div>
@@ -166,7 +171,7 @@
 						</section>
 
 					<!-- Three -->
-						<section class="wrapper style3 container special">
+						<!-- <section class="wrapper style3 container special">
 
 							<header class="major">
 								<h2>Next look at this <strong>cool stuff</strong></h2>
@@ -178,7 +183,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic01.jpg" alt="" /></a>
 										<header>
-											<h3>A Really Fast Train</h3>
+											<h3>Chillify</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
@@ -189,7 +194,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic02.jpg" alt="" /></a>
 										<header>
-											<h3>An Airport Terminal</h3>
+											<h3>Sweet Hashtag Analyzer</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
@@ -202,7 +207,7 @@
 									<section>
 										<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
 										<header>
-											<h3>Hyperspace Travel</h3>
+											<h3>Tetris (In Progress)</h3>
 										</header>
 										<p>Sed tristique purus vitae volutpat commodo suscipit amet sed nibh. Proin a ullamcorper sed blandit. Sed tristique purus vitae volutpat commodo suscipit ullamcorper sed blandit lorem ipsum dolore.</p>
 									</section>
@@ -246,16 +251,15 @@
 					</footer>
 
 				</section>
-
+ -->
 			<!-- Footer -->
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
+						<!-- <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<li><a href="#" class="icon circle fa-file-text"><span class="label">Facebook</span></a></li>
+						<!-- <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li> -->
 						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon circle fa-dribbble"><span class="label">Dribbble</span></a></li>
 					</ul>
 
 					<ul class="copyright">
