--- a/index.html
+++ b/index.html
@@ -256,9 +256,9 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<!-- <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li> -->
+						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
 						<li><a href="#" class="icon circle fa-file-text"><span class="label">Facebook</span></a></li>
-						<!-- <li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li> -->
+						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
 						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
