--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 									<section>
 										<div class="image-cont">
-											<a href="#" class="image featured" target="_blank"><img src="./images/tetris2.png" alt="" /></a>										<header>
+											<a href="#" class="image featured"><img src="./images/tetris2.png" alt="" /></a>										<header>
 										</div>
 											<h3>Tetris (IN PROGRESS)</h3>
 										</header>
@@ -158,7 +158,7 @@
 
 									<section>
 										<div class="image-cont">
-											<a href="#" class="image featured" target="_blank"><img src="images/sweet.png" alt="" /></a>										<header>
+											<a href="http://sweet-analyzer.herokuapp.com" class="image featured" target="_blank"><img src="images/sweet.png" alt="" /></a>										<header>
 										</div>
 											<h3>Sweet Hashtag Analyzer</h3>
 										</header>
@@ -237,7 +237,7 @@
 				</article>
 
 			<!-- CTA -->
-				<section id="cta">
+				<!-- <section id="cta">
 
 					<header>
 						<h2>Ready to do <strong>something</strong>?</h2>
@@ -250,7 +250,7 @@
 						</ul>
 					</footer>
 
-				</section>
+				</section> -->
  -->
 			<!-- Footer -->
 				<footer id="footer">
