--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<div id="page-wrapper">
 
 			<!-- Header -->
-				<header id="header" class="alt">
+				<!-- <header id="header" class="alt">
 					<h1 id="logo"><a href="index.html">HOME <span></span></a></h1>
 					<nav id="nav">
 						<ul>
@@ -44,7 +44,7 @@
 						</ul>
 					</nav>
 				</header>
-
+ -->
 			<!-- Banner -->
 				<section id="banner">
 
@@ -57,16 +57,17 @@
 					<div class="inner">
 
 						<header>
-							<h2>Danny
-							<br/>
-								Yan
+							<h2>&nbspDanny
+							<br/>Yan
 							</h2>
 						</header>
-						<p>Full Stack
+						<p><strong>Software Engineer
+						<!-- <br /> -->
+						</strong>
 						<br />
-						<strong>Web Developer</strong>
-						<br />
-						from the Bay Area</p>
+            React, Redux, Ruby on Rails
+            <br />
+            JavaScript, Python</p>
 						<footer>
 							<ul class="buttons stacked">
 								<li><a href="https://github.com/dannyjyan/" class="button fit scrolly">My Stuff</a></li>
@@ -83,13 +84,13 @@
 					<header class="special container">
 						<span class="icon fas fa-laptop"></span>
 						<h2> Programmer. 
+						</h2>
+						<p>Hi I’m Danny! I’m a Bay Area raised Software Engineer with passion for continuously learning and growing my craft. 
 						<br />
-						Super Cool Intro Here</h2>
-						<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem.
+            My favorite part about software engineering is the rewarding feeling of thinking and creating my own solutions to problems.
 						<br />
-						Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo.
-						<br />
-						Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
+            When I’m not coding, I enjoy playing badminton, chess, and board/video games. 
+          </p>
 					</header>
 
 					<!-- One -->
@@ -171,7 +172,7 @@
 						</section>
 
 					<!-- Three -->
-						<!-- <section class="wrapper style3 container special">
+						<!-- <section class="wrapper style3 container special"> 
 
 							<header class="major">
 								<h2>Next look at this <strong>cool stuff</strong></h2>
@@ -234,8 +235,7 @@
 
 						</section>
 
-				</article>
-
+				</article> -->
 			<!-- CTA -->
 				<!-- <section id="cta">
 
@@ -251,7 +251,6 @@
 					</footer>
 
 				</section> -->
- -->
 			<!-- Footer -->
 				<footer id="footer">
 
