--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 		<title>Danny Yan - Web Developer</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="index is-preload">
@@ -83,7 +86,7 @@
 
 					<header class="special container">
 						<span class="icon fas fa-laptop"></span>
-						<h2> Programmer. 
+						<h2> Programmer
 						</h2>
 						<p>Hi I’m Danny! I’m a Bay Area raised Software Engineer with passion for continuously learning and growing my craft. 
 						<br />
@@ -98,27 +101,32 @@
 							<div class="row gtr-50">
 								<div class="col-8 col-12-narrower">
 
-									<header>
-										<h2>Software Developer</h2>
-									</header>
-									<p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p>
-									<footer>
+									<!-- <header>
+										<h2>Skills</h2>
+                  </header> -->
+                  <img class="image featured" id="headshot" src="images/headshot.jpg" alt="" />
+									<!-- <p>Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu comteger ut fermentum lorem. Lorem ipsum dolor sit amet. Sed tristique purus vitae volutpat ultrices. eu elit eget commodo. Sed tristique purus vitae volutpat ultrices. Aliquam eu elit eget arcu commodo.</p> -->
+									<!-- <footer>
 										<ul class="buttons">
 											<li><a href="#" class="button">Find Out More</a></li>
 										</ul>
-									</footer>
+									</footer> -->
 
 								</div>
 								<div class="col-4 col-12-narrower imp-narrower">
-
+                  <div class="skills-header">
+                    <h2>Skills</h2>
+                  </div>
 									<ul class="featured-icons">
 										<!-- <li><span class="icon rails-icon"><span class="label">Feature 1</span></span></li> -->
-										<li><span id="python-icon" class="icon"><span class="label">Feature 2</span></span></li>
+										<li><span id="python-icon" class="icon"><span class="label">Feature 2</span></span></li> 
 										<li><span id="javascript-icon" class="icon"><span class="label">Feature 3</span></span></li>
 										<li><span id="react-icon" class="icon"><span class="label">Feature 4</span></span></li>
 										<li><span id="redux-icon" class="icon"><span class="label">Feature 5</span></span></li>
 										<li><span id="ruby-icon" class="icon"><span class="label">Feature 6</span></span></li>
 										<li><span id="rails-icon" class="icon"><span class="label">Feature 1</span></span></li>
+										<!-- <li><span id="ruby-icon" class="icon"><span class="label">Feature 6</span></span></li>
+										<li><span id="rails-icon" class="icon"><span class="label">Feature 1</span></span></li> -->
 
 									</ul>
 
@@ -255,10 +263,10 @@
 				<footer id="footer">
 
 					<ul class="icons">
-						<li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon circle fa-file-text"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon circle fa-google-plus"><span class="label">Google+</span></a></li>
-						<li><a href="#" class="icon circle fa-github"><span class="label">Github</span></a></li>
+						<!-- <li><a href="#" class="icon circle fa-twitter"><span class="label">Twitter</span></a></li>
+						<li><a href="#" class="icon circle fa-file-text"><span class="label">Facebook</span></a></li> -->
+						<li><a href="https://www.linkedin.com/in/danny-j-yan/" class="icon circle fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						<li><a href="https://www.github.com/dannyjyan/" class="icon circle fa-github"><span class="label">Github</span></a></li>
 					</ul>
 
 					<ul class="copyright">
