--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 
 									<section>
 										<div class="image-cont">
-											<a href="#" class="image featured"><img src="./images/tetris2.png" alt="" /></a>										<header>
+											<a href="https://dannyjyan.github.io/tetris/" class="image featured"><img src="./images/tetris2.png" alt="" /></a>										<header>
 										</div>
 											<h3>Tetris (IN PROGRESS)</h3>
 										</header>
