Remove old heroku links to github links

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
 										<section>
 											<div class="image-cont">
-												<a href="https://chillify.herokuapp.com/" target="_blank" class="image featured"><img src="images/chillify.png"  alt="" /></a>
+												<a href="https://github.com/dannyjyan/spotify_clone/blob/master/README.md" target="_blank" class="image featured"><img src="images/chillify.png"  alt="" /></a>
 											</div>
 												<header>
 												<h3>Chillify</h3>
@@ -167,7 +167,7 @@
 
 									<section>
 										<div class="image-cont">
-											<a href="http://sweet-analyzer.herokuapp.com" class="image featured" target="_blank"><img src="images/sweet.png" alt="" /></a>										<header>
+											<a href="https://github.com/rfoong8983/sweet_flex_project" class="image featured" target="_blank"><img src="images/sweet.png" alt="" /></a>										<header>
 										</div>
 											<h3>Sweet Hashtag Analyzer</h3>
 										</header>
